--- a/template.yaml
+++ b/template.yaml
@@ -81,7 +81,7 @@ objects:
           - containerPort: 5000
             protocol: "TCP"
         - name: utils-box
-          image: "utils:latest"
+          image: "172.30.1.1:5000/mycloud/utils:latest"
     triggers:
     - type: "ConfigChange"
     - type: "ImageChange"
