Set requests resource and install iputils in utils box
Signed-off-by: Chenxiong Qi <qcxhome@gmail.com>

--- a/template.yaml
+++ b/template.yaml
@@ -33,9 +33,13 @@ objects:
         LABEL version="0.1"
         LABEL vendor="myself"
         RUN dnf --setopt=deltarpm=0 --setopt=install_weak_deps=false --nodocs \
-          install -y httpd && dnf clean all && rm -rf /var/cache/dnf
-        EXPOSE 80
-        CMD ["httpd", "-D", "FOREGROUND"]
+          install -y iputils python3 && \
+          dnf clean all && \
+          rm -rf /var/cache/dnf
+        RUN mkdir /code
+        WORKDIR /code
+        EXPOSE 8000
+        CMD ["python3", "-m", "http.server", "8000", "--bind", "0.0.0.0"]
     strategy:
       type: Docker
     output:
@@ -80,8 +84,16 @@ objects:
           ports:
           - containerPort: 5000
             protocol: "TCP"
-        - name: utils-box
+          resources:
+            requests:
+              cpu: "500m"
+              memory: "64Mi"
+        - name: "utils-box"
           image: "172.30.1.1:5000/mycloud/utils:latest"
+          resources:
+            requests:
+              cpu: "500m"
+              memory: "32Mi"
     triggers:
     - type: "ConfigChange"
     - type: "ImageChange"
