Fix wrong selector for Service
Signed-off-by: Chenxiong Qi <qcxhome@gmail.com>

--- a/template.yaml
+++ b/template.yaml
@@ -112,7 +112,7 @@ objects:
     name: mycloud-webapp
   spec:
     selector:
-      name: frontend-webapp
+      name: mycloud-webapp
     ports:
     - name: web
       port: 80
